consfigurator (0.0.1-2) UNRELEASED; urgency=medium

  * Add dependencies on cl-babel, cl-cffi.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 27 Feb 2021 16:54:31 -0700

consfigurator (0.0.1-1) experimental; urgency=medium

  * Initial release.

 -- Sean Whitton <spwhitton@spwhitton.name>  Wed, 24 Feb 2021 19:42:21 -0700