@@ -1,0 +1,3 @@
+Test-Command: sbcl --script debian/tests/compile.lisp
+Depends: @, sbcl
+Restrictions: allow-stderr, superficial
